@@ -61,3 +61,12 @@ nss-max-tls: tls1.2
 [binding]
 # List of binding modules enabled, comma separated
 enabled:
+# Bind-method-string of always included binding methods
+# List entries are seperated with newlines, every item exists of:
+# method1,key1=val1,key2=val2|method2,.....
+; forced-binding-methods:
+# Whether the forced binding methods are included first or last
+; forced-binding-methods-position: first
+# Bind-method-string of default bind methods (used if nothing else specified)
+# Same syntax as forced-binding-methods
+; default-binding-methods:
