@@ -1,3 +1,6 @@
+2018-04-24  Patrick Uiterwijk  <puiterwijk@redhat.com>
+	* src/utils.py: Implement default and forced binding
+
 2018-04-23  Patrick Uiterwijk  <puiterwijk@redhat.com>
 	* src/*: Add decrypt method
 
